# PhatStorage

./: Deploy.toml  README.md  devphase.config.json  package.json  rust-toolchain.toml
contracts/phat_storage/: Cargo.toml
contracts/phat_storage/s3/: Cargo.toml  lib.rs
contracts/phat_storage/src/: lib.rs
tests/phat_storage/: phat_storage.test.ts
