[package]
name = "phat_storage"
version = "0.1.0"
authors = ["HashWarlock"]
edition = "2021"

[dependencies]
ink = { version = "4.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

pink-extension = { version = "0.4.2", default-features = false }
pink-s3 = { version = "0.4.1", default-features = false }

[lib]
name = "phat_storage"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "pink-s3/std"
]
ink-as-dependency = []
